(game):added get game to the game service
