# backend/internal/infrastructure/db/postgres/asset_repository.go
@@ -4,6 +4,8 @@ import (
 	"bitnix-backend/internal/domain/entities"
 	"context"
 	"database/sql"
+
+	"github.com/google/uuid"
 )
 
 type PostgresAssetRepository struct {
@@ -39,4 +41,43 @@ func (par PostgresAssetRepository) CreateAll(ctx context.Context, assets []entit
 	}
 
 	return tx.Commit()
+}
+
+func (par PostgresAssetRepository) GetAllByGame(ctx context.Context, gameID uuid.UUID) ([]*entities.Asset, error) {
+	query := `SELECT id, game_id, type, url, filename, created_at FROM assets WHERE game_id = $1`
+
+	rows, err := par.DB.QueryContext(ctx, query, gameID)
+
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+
+	var dbAssets []Asset
+	for rows.Next() {
+		var dbAsset Asset
+
+		err := rows.Scan(
+			&dbAsset.ID,
+			&dbAsset.GameID,
+			&dbAsset.Type,
+			&dbAsset.URL,
+			&dbAsset.Filename,
+			&dbAsset.CreatedAt,
+		)
+
+		if err != nil {
+			return nil, err
+		}
+
+		dbAssets = append(dbAssets, dbAsset)
+	}
+
+	var assets []*entities.Asset
+
+	for _, dbAsset := range dbAssets {
+		assets = append(assets, fromDBAsset(&dbAsset))
+	}
+
+	return assets, nil
 }
